--- a/.github/workflows/msrc.yml
+++ b/.github/workflows/msrc.yml
@@ -39,4 +39,4 @@ jobs:
       with:
         image: docker.pkg.github.com/osbuild/containers/ghci-manifestdb:v1
         run: |
-          make msrc-push "MSRC_MANIFEST=${{ matrix.manifest }}"
+          make msrc-push "MSRC_MANIFEST=by-checksum/${{ matrix.manifest }}"
