--- a/.github/workflows/msrc.yml
+++ b/.github/workflows/msrc.yml
@@ -34,9 +34,12 @@ jobs:
     steps:
     - name: "Clone Repository"
       uses: actions/checkout@v2
+    - name: "Authenticate to GitHub Packages"
+      run: docker login docker.pkg.github.com -u '${{ github.actor }}' -p '${{ github.token }}'
     - name: "Prefetch and Store Sources"
       uses: osbuild/containers/src/actions/ghci-osbuild@v1
       with:
         image: docker.pkg.github.com/osbuild/containers/ghci-manifestdb:v1
         run: |
+          docker login docker.pkg.github.com -u "${{ github.actor }}" -p "${{ github.token }}"
           make msrc-push "MSRC_MANIFEST=by-checksum/${{ matrix.manifest }}"
