--- a/.github/workflows/msrc.yml
+++ b/.github/workflows/msrc.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       manifests: ${{ steps.enumerate.outputs.manifests }}
+      n_manifests: ${{ steps.enumerate.outputs.n_manifests }}
     steps:
     - name: "Clone Repository"
       uses: actions/checkout@v2
@@ -18,13 +19,19 @@ jobs:
       id: enumerate
       run: |
         MANIFESTS="$(make --silent msrc-list-diff "MSRC_TOKEN=${{ github.token }}")"
+        N_MANIFESTS="$(echo "${MANIFESTS}" | jq -c '. | length')"
         echo "::set-output name=manifests::${MANIFESTS}"
+        echo "::set-output name=n_manifests::${N_MANIFESTS}"
     - name: "Print Manifest List"
-      run: echo '${{ steps.enumerate.outputs.manifests }}' | jq .
+      run: |
+        echo "${{ steps.enumerate.outputs.manifests }}" | jq .
+    - name: "Print Variables"
+      run: |
+        echo "n_manifests: ${{ steps.enumerate.outputs.n_manifests }}"
 
   msrc:
     name: "Prefetch Sources"
-    if: github.repository == 'osbuild/manifestdb'
+    if: github.repository == 'osbuild/manifestdb' && needs.enumerate.outputs.n_manifests != 0
     runs-on: ubuntu-latest
     needs: enumerate
     strategy:
